{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "fe68c842-8986-4290-808f-da74497b6cf1",
            "actions": [
                {
                    "name": "PlayerAMove",
                    "type": "Value",
                    "id": "4dda39be-f01c-4202-97b9-a4dbd53bac23",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerARun",
                    "type": "Button",
                    "id": "d376715b-bf62-43fa-889a-00b349878567",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerAJump",
                    "type": "Button",
                    "id": "b31e9c05-a658-4101-992c-015e1873376d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerACast1",
                    "type": "Button",
                    "id": "78151fce-c9e8-4d59-a427-e740e6861f82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerACast2",
                    "type": "Button",
                    "id": "ee91f23b-54f8-45fd-9079-e57090be4fb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerACast3",
                    "type": "Button",
                    "id": "df8c50ed-7540-46f9-acd7-7ccfc4733211",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "e7d3032d-0207-480e-a057-35b3bc37bb2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBMove",
                    "type": "Value",
                    "id": "4474efde-84ee-4541-bb3e-7c9bb739ed2f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerBRun",
                    "type": "Button",
                    "id": "bc567b6c-52dd-413d-b469-79be94a82929",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBJump",
                    "type": "Button",
                    "id": "826773cb-88a7-431d-92c4-b0f3095c8bc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBCast1",
                    "type": "Button",
                    "id": "0f589329-0b99-4ab8-a023-0991acdf95ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBCast2",
                    "type": "Button",
                    "id": "b9e3fa00-fb5c-4ac1-809b-06f8e9d5fb74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerBCast3",
                    "type": "Button",
                    "id": "e855e1ee-e08f-4d28-8cad-7d7c2f274572",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "07924e31-f483-433a-802b-093afe09e608",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9ae4fde6-b2b5-4d55-8632-eb92f269b93f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7d2ad273-2089-4f95-9b00-81c3e6885bcd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "972bb32e-a70d-41df-9380-67228e708e55",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerARun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dce548f0-c383-40e9-a3ea-3bddf7fc99b8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c7c0b3b-f067-48d5-b352-542ce6758693",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerACast1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b33f5380-7b28-4f39-97cc-c30fa4e8be16",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerACast2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aad7ead3-f316-4fda-98c9-8f1d730d502d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerACast3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b056fe67-4d2d-4e1d-9f2e-847c6f50626b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2ecbfe2d-348a-45cd-a78e-93451d04e570",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9af2bd66-e09b-4f98-9447-4ecc6245bdb7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "49d54084-8529-476f-90b6-2f3e913af749",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f93ed3b1-c6ff-4df6-9a0e-e8501ec5d983",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88883c30-a027-4d35-b749-1b97d984519a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41913a57-e4b5-40a5-b970-df4989597690",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBCast1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8eaa2069-6745-4ed2-b410-bd970e0ae897",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBCast2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae02ed33-8148-4d4c-94c6-96d87f889e81",
                    "path": "<Keyboard>/quote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerBCast3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}